# ScrewSplat-public

./: .gitignore  Cargo.toml  README.md  dataset_configuration.txt  evaluator.py  generate_data.py  generate_video.py  make_custom_images.py  make_custom_videos.py  make_videos.py  render-custom-view-guide.md  requirements.txt  train.py  train_gs.py  visualize_object.py  visualize_screwsplat.py
articulated_object/: __init__.py  articulated_object_renderer.py
configs/: gen_data_config.yml  gen_video_config.yml  object_infos.yml  object_video_infos.yml  vis_obj_config.yml
docs/: architecture.md  modules.md  update_log.md
gaussian_renderer/: __init__.py
scene/: cameras.py  dataset_readers.py
scripts/: extract_urdf.py  make_custom_images.py  make_custom_videos.py  render_custom_view.py
src/: app.rs  camera.rs  controller.rs  debug.rs  main.rs
src/entity/: mod.rs  player.rs
src/mesh/: builder.rs  mod.rs
src/render/: buffer.rs  context.rs  light.rs  mod.rs  pipeline.rs  shader.wgsl  texture.rs
src/world/: block.rs  chunk.rs  mod.rs  storage.rs  terrain.rs
translate/bucket/: bucket.urdf  urdf_analysis.txt
translate/fan/: fan.urdf  urdf_analysis.txt
translate/globe/: globe.urdf  urdf_analysis.txt
translate/microwave/: microwave.urdf  urdf_analysis.txt
translate/trashcan/: trashcan.urdf  urdf_analysis.txt
translate/usb/: urdf_analysis.txt  usb.urdf
utils/: camera_utils.py  tsdf_fusion.py
