[package]
name = "haven"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = { version = "1.25.0", features = ["derive"] }
env_logger = "0.11.9"
glam = "0.32.1"
image = "0.25.10"
log = "0.4.29"
pollster = "0.4.0"
wgpu = "23.0"
winit = "0.30.13"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
flate2 = "1.0"
egui = "0.30"
egui-wgpu = "0.30"
egui-winit = "0.30"
sysinfo = "0.33"
